objects/CMPL123__WF_Phase_Status__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__WF_Phase_Status_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>WF Phase Status External Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Workflow_Rule_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Rule Phase</label>
        <referenceTo>CMPL123__WF_Rule_Phase__c</referenceTo>
        <relationshipLabel>Workflow Phase Statuses</relationshipLabel>
        <relationshipName>Workflow_Phase_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Workflow_Status__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Status</label>
        <referenceTo>CMPL123__WF_Status__c</referenceTo>
        <relationshipLabel>Workflow Phase Statuses</relationshipLabel>
        <relationshipName>Workflow_Phase_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Workflow Phase Status</label>
    <listViews>
        <fullName>CMPL123__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WFPS-{000000}</displayFormat>
        <label>Workflow Phase Status Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workflow Phase Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>